<resources>
    <string name="app_name">DonAr</string>
    <!-- TextViews -->
    <string name="txtTipoVoluntario">¿Qué tipo de usuario sos? </string>
    <string name="txtNombre">Nombre: </string>
    <string name="txtApellido">Apellido: </string>
    <string name="txtDNI">DNI: </string>
    <string name="txtMail">Mail</string>
    <string name="txtTelefono">Teléfono: </string>
    <string name="txtMatricula">Matricula: </string>
    <string name="txtEspecialidad">Especialidad: </string>
    <string name="txtSeguro">Seguro: </string>
    <string name="txtAplicacionYModulo">DonAr</string>
    <string name="txtUsuario">Aca va el nombre de usuario</string>
    <string name="txtPacientes">Pacientes: </string>
    <string name="txtSintomasYMedicamentos">Síntomas: </string>
    <string name="txtDetalle">Detalle: </string>
    <string name="txtHorarios">Horarios </string>
    <string name="txtHorarioIngreso">Horario de ingreso </string>
    <string name="txtHorarioSalida">Horarios de salida</string>
    <string name="txtEdad">Edad: </string>
    <string name="txtSinInternet1">Por el momento no cuenta con internet</string>
    <string name="txtSinInternet2">para realizar esta acción.</string>
    <string name="txtSinInternet3">Por favor, intente mas tarde.</string>
    <string name="historiaClinicaTitle">Historia clinica</string>
    <string name="txtGenero">Género: </string>
    <string name="txtNombreCompleto">Nombre completo: </string>
    <string name="txtContacto">Contacto: </string>
    <string name="txtTituloHC">Historia Clinica</string>
    <string name="txtProvincia">Provincia</string>
    <string name="txtLocalidad">Localidad</string>
    <string name="loginWarningDescr">Para poder utilizar esta aplicación debe estar registrado.</string>
    <string name="txtTituloReportes">Reportes</string>

    <!--Switch-->
    <string name="seguimiento">Seguimiento </string>
    <string name="diagnosticoPresuntivo">Diagnóstico presuntivo</string>
    <string name="tratamientoFarmacologico">Tratamiento farmacológico</string>

    <!-- Botones -->
    <string name="btnRegistrar">Registrarse</string>
    <string name="btnSiguiente">Siguiente</string>
    <string name="btnRegistro">Registrate</string>
    <string name="btnBuscar">Buscar</string>
    <string name="btnLogin">Login</string>
    <string name="btnSolicitar">Solicitar</string>
    <string name="btnSAsignar">Asignar</string>
    <string name="btnGenerar">Generar</string>
    <string name="btnRegistrarDonacion">Enviar</string>

    <!-- Radio buttons-->
    <string name="reporteComposiciónVoluntarios">Composición de voluntarios</string>
    <string name="reporteIdentidadDeGenero">Identidad de genero</string>
    <string name="reporteRangoEtarioPacientes">Rango etario de pacientes</string>
    <string name="reporteTrazabilidad">Trazabilidad de donaciones</string>
    <string name="reporteMedicosPorEspecialidad">Medicos por especialidad</string>

    <!-- Descripciones -->
    <string name="voluntarios">Voluntarios</string>
    <string name="pacientes">Pacientes</string>
    <string name="donaciones">Donaciones</string>
    <string name="reportes">Reportes</string>

    <!-- Toolbar -->
    <string name="action_login">Login</string>
    <string name="action_registro">Registro</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="vacio"> </string>
    <string name="btnRegistrarse">Registrarse</string>
    <string name="donacionDescripcion">Nombre</string>
    <string name="donacionVencimiento">¿Tiene vencimiento?</string>
    <string name="donacionCantidad">Cantidad</string>
    <string name="title_activity_donacion_crear"> </string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_donacion_main"> </string>
    <string name="leer_qr">Leer QR</string>
    <string name="lugar_entrega">Lugar de entrega</string>
    <string name="agregar_donacion">Agregar donación</string>
    <string name="enfoque_el_codigo">ENFOQUE EL CODIGO</string>
    <string name="recibir_donacion">Recibir Donacion</string>
    <string name="detalle">Nombre:</string>
    <string name="cantidad">Cantidad:</string>
    <string name="destino_actual">Destino Actual:</string>
    <string name="cargando_informacion">(Cargando información...)</string>
    <string name="fecha_donacion">Fecha:</string>
    <string name="ingrese_la_fecha_de_vencimiento">Fecha de vencimiento</string>

    <!-- Validaciones formulario -->
    <string name="nombre_invalido">Por favor, inserte un nombre válido.</string>
    <string name="telefono_invalido">Por favor, inserte su número de teléfono.</string>
    <string name="TyC_invalido">Debe aceptar los términos y condiciones.</string>
    <string name="apellido_invalido">Por favor, inserte su apellido.</string>
    <string name="edad_invalida">Por favor, ingrese su edad.</string>
    <string name="DNI_invalido">Por favor, inserte su DNI.</string>
    <string name="tipo_usuario_invalido">Por favor, seleccione un tipo de usuario.</string>
    <string name="txtNacionalidad">Nacionalidad</string>
    <string name="txtHistorialClinicoTitulo">Historial Clínico</string>
    <string name="email_valido">Por favor, inserte su email.</string>
    <string name="provincia_invalida">Por favor, especifique su provincia de residencia.</string>
    <string name="pais_invalido">Por favor, especifique su país de residencia.</string>
    <string name="genero_invalido">Por favor, especifique su género.</string>
    <string name="tipo_de_usuario_invalido">Por favor, especifique su tipo de usuario.</string>
    <string name="mail_invalido">Por favor, ingrese un correo electrónico válido.</string>
    <string name="matricula_invalida">Por favor, introduzca su matrícula.</string>
    <string name="seguro_invalido">Por favor, introduzca su seguro.</string>
    <string name="horario_ingreso_vacio">Por favor, ingrese su horario de ingreso.</string>
    <string name="horario_salida_vacio">Por favor, ingrese su horario de salida.</string>
    <string name="horarios_incoherentes">El horario de ingreso no puede ser mayor al de salida.
    </string>
    <string name="matricula_iniciales_invalidas">La matrícula debe comenzar con las iniciales MP o
    MN.</string>
    <string name="matricula_cantidad_caracteres_invalidos">La matricula debe poseer 8 caracteres.
    </string>
    <string name="especialidad_invalida">Por favor, indique su especialidad.</string>
    <string name="horarios_fuera_rango">Los horarios contemplados por la fundación son de 9:00AM a
        7:00PM.</string>

    <!-- Mensajes-->
    <string name="NoTieneAcceso">Usted no cuenta con permisos para realizar esta acción.</string>
    <string name="TyCtitulo">Términos y Condiciones</string>
    <string name="TyCtext"> \u0020El sistema DonAr mediante el presente informa y solicita el uso de datos
        de los usuarios con fines estadísticos, como también para el uso de personal médico
        vinculado a la fundación \"¿Me regalás una hora?\" y personal administrativo competente para el
        manejo a nivel estadístico.  Cualquier dato que se enucentre mal cargado por parte del
        usuario será responsabilidad del mismo, al igual que la actualización y modificación de sus
        datos.  En caso de no poder realizar una actualización de los datos correspondientes el
        usuario debera contactarse con la fundación para solicitar la actualización de los mismos.
        Queda por el presente la aceptación del completo desistimiento de cualquier tipo de denuncia
        por parte del usuario para el uso de la aplicaicón.  \n\n  Al aceptar estos términos y condiciones
        usted deja asentado que autoriza a recibir orientación médica/psicológica profesional de
        manera gratuita y solidaria a través de la asociación civil \"¿Me regalás una hora?\" por
        medio de la modalidad on-line correspondiente al uso de la aplicación DonAr.\n\n En caso de ser
        un menor de edad (correspondiente según lo decretado por la justicia de la nación Argentina)
        sea quien utilice los servicios brindados  por medio de la aplicación, la aceptación de estos
        términos y condiciones debe ser realizada por su padre o tutor. Si por algún motivo no
        fuese el padre o tutor quien realizace la aceptación de los términos y condiciones la
        responsabilidad completa quedará sobre el  responsable legal del menor.  El uso de la
        aplicación es 100% on-line por lo cual es necesario que se cuente con conexión a internet para
        poder utilizar la misma sin percance en el funcionamiento.</string>
    <string name="acepto_los_t_rminos_y_condiciones">Acepto los términos y condiciones</string>
    <string name="reporteGenerosTitle">Composición de Usuarios por Género</string>
    <string name="seleccionar_ingreso_btn">Seleccionar Ingreso</string>
    <string name="seleccionar_salida_btn">Seleccionar Salida</string>
    <string name="horario_ingreso_txt">Horario de Ingreso: hh:mm hs.</string>
    <string name="registrar_donacion_title">Registro de Donaciones</string>

    <string name="tituloDonacionDetalle">Detalle: </string>

    <string name="seleccionar_ingreso_btn">Seleccionar Ingreso</string>
    <string name="matricula_iniciales_invalidas">La matrícula debe comenzar con las iniciales MP o MN.</string>
    <string name="matricula_cantidad_caracteres_invalidos">La matricula debe poseer 8 caracteres.</string>
    <string name="fecha_de_vencimiento">Fecha de vencimiento</string>
    <string name="entregar_donacion">Entregar donacion</string>
    <string name="agregar_destino">Agregar destino</string>


</resources>
