<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".pacienteAsignarEspecialidad"
    android:orientation="vertical">

    <include
        android:id="@+id/include"
        layout="@layout/activity_don_ar_tool_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"></include>

    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/txtNombre"
        app:layout_constraintBottom_toBottomOf="@+id/include"
        app:layout_constraintEnd_toStartOf="@+id/txtIdPaciente"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/txtApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtApellido"
        app:layout_constraintBottom_toBottomOf="@+id/include"
        android:layout_marginTop="10dp"/>

    tools:layout_editor_absoluteX="51dp"
    <TextView
        android:id="@+id/txtTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTelefono"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/txtSintomasYMedicamentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtSintomasYMedicamentos"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/medtSintomasYMedicamentos"
        android:layout_width="match_parent"
        android:layout_height="251dp"
        android:inputType="textMultiLine"
        android:layout_marginTop="10dp" />



    <TextView
        android:id="@+id/txtEspecialidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtEspecialidad"
        android:paddingTop="10dp"
        />

    <Spinner
        android:id="@+id/spnEspecialidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btnAsignar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medtSintomasYMedicamentos" />

    <TextView
        android:id="@+id/txtIdConsulta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtTelefono"
        tools:layout_editor_absoluteY="130dp"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/txtIdPaciente"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:text=" "
        tools:visibility="invisible" />

    <Button
        android:id="@+id/btnAsignar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/btnSAsignar"
        />


</LinearLayout>