<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pacienteSolicitarConsulta">

    <include
        android:id="@+id/include"
        layout="@layout/activity_don_ar_tool_bar"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"/>

    <TextView
        android:id="@+id/txtHistorialClinicTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10sp"
        android:text="Solicitar Consulta"
        android:textColor="@color/textBlack"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10sp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHistorialClinicTitulo"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtNombre"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/txtApellido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtApellido"
                android:layout_marginTop="20sp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/txtTelefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtTelefono"
                android:layout_marginTop="20sp"
                android:textSize="20sp"/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtMail"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtGenero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtGenero"
                android:layout_marginTop="20sp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtEdad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtEdad"
                android:layout_marginTop="20sp"
                android:textSize="20sp"/>

        </LinearLayout>



    </LinearLayout>

    <TextView
        android:id="@+id/txtIdSolicitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" "
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/include"
        app:layout_constraintTop_toBottomOf="@+id/include"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/txtSintomasYMedicamentos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtSintomasYMedicamentos"
        android:layout_marginHorizontal="10sp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.478" />

    <EditText
        android:id="@+id/medtSintomasYMedicamentos"
        android:layout_width="match_parent"
        android:layout_height="251sp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:layout_marginHorizontal="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/include"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:id="@+id/btnSolciitar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSolicitar"
        android:layout_marginHorizontal="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/include"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medtSintomasYMedicamentos" />




</androidx.constraintlayout.widget.ConstraintLayout>