<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pacientesHistoriaCLinica">


    <include
        android:id="@+id/include4"
        layout="@layout/activity_don_ar_tool_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"/>

    <TextView
        android:id="@+id/txtHistorialClinicTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10sp"
        android:text="@string/txtHistorialClinicoTitulo"
        android:textColor="@color/textBlack"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginHorizontal="10sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/txtHistorialClinicTitulo"
    app:layout_constraintVertical_bias="0.0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/txtNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtNombreCompleto"
            android:textSize="15sp"
            android:layout_marginBottom="10sp"/>

        <TextView
            android:id="@+id/txtEdad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtEdad"
            android:textSize="15sp"
            android:layout_marginVertical="10sp"/>

        <TextView
            android:id="@+id/txtGenero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtGenero"
            android:textSize="15sp"
            android:layout_marginVertical="10sp"
            />

        <TextView
            android:id="@+id/txtDocumento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtDNI"
            android:layout_marginTop="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/include4" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"

        >

        <TextView
            android:id="@+id/txtTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtTelefono"
            android:textSize="15sp"
            android:layout_marginBottom="10sp"/>

        <TextView
            android:id="@+id/txtContacto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtContacto"
            android:textSize="15sp"
            android:layout_marginVertical="10sp"/>

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtMail"
            android:textSize="15sp"
            android:layout_marginVertical="10sp"/>


    </LinearLayout>



</LinearLayout>



    <TextView
        android:id="@+id/txtIdEvento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vacio"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtDetalle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtDetalle"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/edtDetalle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="1.0" />




    <EditText
        android:id="@+id/edtSintomas"
        android:layout_width="match_parent"
        android:layout_height="90sp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:layout_marginHorizontal="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/include4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.443" />


    <TextView
        android:id="@+id/txtSintomas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtSintomasYMedicamentos"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.372" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginHorizontal="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/include4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.549">

        <Switch
            android:id="@+id/stcDiagnosticoPresuntivo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autoSizeTextType="uniform"
            android:text="@string/diagnosticoPresuntivo"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="10sp"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/include4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.622">

        <Switch
            android:id="@+id/stcTratamientoFarmacologico"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:autoSizeTextType="uniform"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:text="@string/tratamientoFarmacologico"
            android:textSize="25sp" />
    </LinearLayout>

    <!--
    <Switch
        android:id="@+id/stcSeguimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginLeft="144dp"
        android:text="@string/seguimiento"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="507dp" />
-->


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="10sp"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/include4"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.696">

        <Switch
            android:id="@+id/stcSeguimiento"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:autoSizeTextType="uniform"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:text="@string/seguimiento"
            android:textSize="25sp" />
    </LinearLayout>


    <EditText
        android:id="@+id/edtDetalle"
        android:layout_width="316dp"
        android:layout_height="135dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.973" />

    <ImageButton
        android:id="@+id/imbAgregar"
        android:layout_width="73dp"
        android:layout_height="67dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/edtDetalle"
        app:layout_constraintTop_toBottomOf="@+id/txtDetalle"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_input_add" />

    <ImageButton
        android:id="@+id/ibmCancelar"
        android:layout_width="73sp"
        android:layout_height="67sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/edtDetalle"
        app:layout_constraintTop_toBottomOf="@+id/imbAgregar"
        app:layout_constraintVertical_bias="0.062"
        app:srcCompat="@android:drawable/ic_delete" />

</androidx.constraintlayout.widget.ConstraintLayout>